# real-time-parameter-tuning-platform

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  makeup.sh  mmm.txt  refresh.sh  rv1103.cmake
doc/: design.md  problems-and-solutions.md
include/: Init.hpp  Ncnn.hpp  commands.hpp  tuning_platform.hpp  vofa.hpp
libraries/zf_common/: zf_common_headfile.h
libraries/zf_device/: zf_device_uvc.cpp  zf_device_uvc.h
libraries/zf_driver/: zf_driver_pit.cpp  zf_driver_pit.h  zf_driver_udp.cpp  zf_driver_udp.h
src/: Init.cpp  Ncnn.cpp  Vofa.cpp  commands.cpp  tuning_platform.cpp
windows/: README.md  build.py  install.bat  monitor.py  requirements.txt
windows/app/: main.py
windows/app/ai/: llm_advisor.py  pid_autotune.py
windows/app/backend/: parser.py  tcp_client.py
windows/app/ui/: ai_tuning_page.py  connect_page.py  dashboard_page.py  main_window.py
windows/app/ui/styles/: theme.qss
windows/app/ui/widgets/: log_console.py  param_slider.py  realtime_plot.py
